--- a/index.html
+++ b/index.html
@@ -270,9 +270,137 @@
         }
 	</style>
 </head>
-<body width="100%" style="margin: 0; padding: 0 !important; mso-line-height-rule: exactly;  display:block !important; min-width:100% !important; width:100% !important; -webkit-text-size-adjust:none;" >
-	<!-- Email Body: BEGIN -->
-	
-	<!-- Email Body : END -->
+<body width="100%" style="margin: 0; padding: 0 !important; mso-line-height-rule: exactly;  display:block !important; min-width:100% !important; width:100% !important; -webkit-text-size-adjust:none;" bgcolor="#E7E6E6">
+	<!-- Email Logo: BEGIN -->
+	<table cellpadding="0" cellspacing="0" border="0" width="100%">
+        <tr>
+            <td align="center" valign="top">
+                <table cellpadding="0" cellspacing="0" border="0" width="600" class="mobile-shell" bgcolor="#ffffff">
+                    <tr>
+                        <td class="td" style="width: 600px; min-width: 600px; font-size: 0pt; line-height: 0pt; margin: 0; padding: 15px; Margin: 0">
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                <tr>
+                                    <td style="font-size: 0pt; line-height: 0pt; text-align: left;">
+                                        <img src="https://github.com/LucasPerrotaRoriz/Money-Transactional-Email-01/blob/main/images/logo.png?raw=true"
+                                        width="85" height="85" border="0" alt="">
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+	<!-- Email Logo : END -->
+
+    <!-- Email Home: BEGIN -->
+	<table cellpadding="0" cellspacing="0" border="0" width="100%">
+        <tr>
+            <td align="center" valign="top">
+                <table cellpadding="0" cellspacing="0" border="0" width="600" class="mobile-shell" bgcolor="#ffffff">
+                    <tr>
+                        <td class="td" style="width: 600px; min-width: 600px; font-size: 0pt; line-height: 0pt; margin: 0; padding: 30px 15px 15px; Margin: 0">
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                <tr>
+                                    <th class="column" width="300" style="font-size: 0pt; font-weight: normal; line-height: 0pt; margin: 0; padding: 0;">
+                                        <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                            <tr>
+                                                <td style="font-family: 'Arial Black', Arial, sans-serif; text-align: left; padding-bottom: 20px; color: #555555;">
+                                                    <h1 style="font-size: 22px; font-weight: normal; line-height: 140%; ">
+                                                        Woohoo! <br />
+                                                        You just got paid!
+                                                    </h1>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="font-family: Arial, sans-serif; text-align: left; padding-bottom: 15px; color: #000000;">
+                                                    <p style="font-size: 14px; line-height: 22px;">
+                                                        Cash was just deposited into your account. <br />
+                                                        Tap to see who it's from.
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td align="left">
+                                                    <table cellpadding="0" cellspacing="0" border="0">
+                                                        <tr>
+                                                            <td style="font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; padding: 20px; border-radius: 10px; 
+                                                            background-color: #0396A6; color: #ffffff;">
+                                                                <span style="text-decoration: none; color: #ffffff;">
+                                                                    <a href="#" target="_blank" style="text-decoration: none; color: #ffffff;">
+                                                                        <span>
+                                                                            See Details
+                                                                        </span>
+                                                                    </a>
+                                                                </span>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </th>
+
+                                    <th class="column-empty" width="1" style="font-size: 0pt; font-weight: normal; line-height: 0pt; margin: 0; padding: 0;"></th>
+
+                                    <th class="column" width="300" style="font-size: 0pt; font-weight: normal; line-height: 0pt; margin: 0; padding: 0;">
+                                        <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                            <tr>
+                                                <td class="fluid-img" style="font-size: 0pt; line-height: 0pt; text-align: center;">
+                                                    <img src="https://github.com/LucasPerrotaRoriz/Money-Transactional-Email-01/blob/main/images/money.jpg?raw=true"
+                                                    width="300" height="230" border="0" alt="">
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </th>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+	<!-- Email Home : END -->
+
+    <!-- Email Extra Cash: BEGIN -->
+	<table cellpadding="0" cellspacing="0" border="0" width="100%">
+        <tr>
+            <td align="center" valign="top">
+                <table cellpadding="0" cellspacing="0" border="0" width="600" class="mobile-shell" bgcolor="#ffffff">
+                    <tr>
+                        <td class="td" style="width: 600px; min-width: 600px; font-size: 0pt; line-height: 0pt; margin: 0; padding: 30px 15px 15px; Margin: 0">
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                <tr>
+                                    <td style="font-size: 0pt; line-height: 0pt; text-align: center; padding-bottom: 10px;">
+                                        <img src="https://github.com/LucasPerrotaRoriz/Money-Transactional-Email-01/blob/main/images/background.png?raw=true"
+                                        width="115" height="52" border="0" alt="">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="font-family: 'Arial', sans-serif; text-align: center; color: #0396A6;">
+                                        <h2 style="font-size: 18px; line-height: 140%;">
+                                            Wanna earn some extra cash?
+                                        </h2>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="font-family: 'Arial', sans-serif; text-align: center; color: #000000;">
+                                        <p style="font-size: 14px; line-height: 22px;">
+                                            Here are a few ways you can beef up your bank account.
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+
+                 
+                </table>
+            </td>
+        </tr>
+    </table>
+	<!-- Email Extra Cash : END -->
 </body>
 </html>
