--- a/index.html
+++ b/index.html
@@ -396,7 +396,154 @@
                         </td>
                     </tr>
 
-                 
+                    <!-- 3 Column : BEGIN -->
+                    <tr>
+                        <td class="td" style="width: 600px; min-width: 600px; font-size: 0pt; line-height: 0pt; margin: 0; padding: 30px 15px 15px; Margin: 0">
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                <tr>
+                                    <!-- Column 01 : BEGIN -->
+                                    <th class="column" width="190" style="font-size: 0pt; line-height: 0pt; text-align: left;">
+                                        <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                            <tr>
+                                                <td style="font-size: 0pt; line-height: 0pt; text-align: center; padding-bottom: 5px;">
+                                                    <img src="https://github.com/LucasPerrotaRoriz/Money-Transactional-Email-01/blob/main/images/bills.png?raw=true"
+                                                    width="62" height="62" border="0" alt="">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="font-family: 'Arial', sans-serif; text-align: center; padding-bottom: 10px; color: #000000;">
+                                                    <h3 style="font-size: 16px; line-height: 140%;">
+                                                        We can lower your <br /> monthly bills
+                                                    </h3>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="font-family: 'Arial', sans-serif; text-align: center; padding-bottom: 10px; color: #000000;">
+                                                    <p style="font-size: 14px; line-height: 140%;">
+                                                        Our team of experts <br /> 
+                                                        negotiators may be able to <br /> 
+                                                        find better rates on your bills.
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td align="center">
+                                                    <table cellpadding="0" cellspacing="0" border="0">
+                                                        <tr>
+                                                            <td style="font-family: 'Arial', sans-serif; font-size: 14px; text-align: center; padding: 20px; border-radius: 6px; 
+                                                            background-color: #0396A6; color: #ffffff;">
+                                                                <span style="text-decoration: none; color: #ffffff;">
+                                                                    <a href="#" target="_blank" style="text-decoration: none; color: #ffffff;">
+                                                                        Learn More
+                                                                    </a>
+                                                                </span>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </th>
+                                    <!-- Column 01 : END -->
+
+                                    <th class="column-empty2" width="10" style="font-size: 0pt; font-weight: normal; line-height: 0pt; margin: 0; padding: 0;"></th>
+
+                                    <!-- Column 02 : BEGIN -->
+                                    <th class="column" width="190" style="font-size: 0pt; line-height: 0pt; text-align: left;">
+                                        <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                            <tr>
+                                                <td style="font-size: 0pt; line-height: 0pt; text-align: center; padding-bottom: 5px;">
+                                                    <img src="https://github.com/LucasPerrotaRoriz/Money-Transactional-Email-01/blob/main/images/opinion.png?raw=true"
+                                                    width="62" height="62" border="0" alt="">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="font-family: 'Arial', sans-serif; text-align: center; padding-bottom: 10px; color: #000000;">
+                                                    <h3 style="font-size: 16px; line-height: 140%;">
+                                                        Give your opinion <br /> and get paid
+                                                    </h3>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="font-family: 'Arial', sans-serif; text-align: center; padding-bottom: 10px; color: #000000;">
+                                                    <p style="font-size: 14px; line-height: 140%;">
+                                                        Our team of experts <br /> 
+                                                        negotiators may be able to <br /> 
+                                                        find better rates on your bills.
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td align="center">
+                                                    <table cellpadding="0" cellspacing="0" border="0">
+                                                        <tr>
+                                                            <td style="font-family: 'Arial', sans-serif; font-size: 14px; text-align: center; padding: 20px; border-radius: 6px; 
+                                                            background-color: #0396A6; color: #ffffff;">
+                                                                <span style="text-decoration: none; color: #ffffff;">
+                                                                    <a href="#" target="_blank" style="text-decoration: none; color: #ffffff;">
+                                                                        Learn More
+                                                                    </a>
+                                                                </span>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </th>
+                                    <!-- Column 02 : END -->
+
+                                    <th class="column-empty2" width="10" style="font-size: 0pt; font-weight: normal; line-height: 0pt; margin: 0; padding: 0;"></th>
+
+                                    <!-- Column 03 : BEGIN -->
+                                    <th class="column" width="190" style="font-size: 0pt; line-height: 0pt; text-align: left;">
+                                        <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                            <tr>
+                                                <td style="font-size: 0pt; line-height: 0pt; text-align: center; padding-bottom: 5px;">
+                                                    <img src="https://github.com/LucasPerrotaRoriz/Money-Transactional-Email-01/blob/main/images/shop.png?raw=true"
+                                                    width="62" height="62" border="0" alt="">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="font-family: 'Arial', sans-serif; text-align: center; padding-bottom: 10px; color: #000000;">
+                                                    <h3 style="font-size: 16px; line-height: 140%;">
+                                                        Earn money to shop in <br /> your free time
+                                                    </h3>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="font-family: 'Arial', sans-serif; text-align: center; padding-bottom: 10px; color: #000000;">
+                                                    <p style="font-size: 14px; line-height: 140%;">
+                                                        Our team of experts <br /> 
+                                                        negotiators may be able to <br /> 
+                                                        find better rates on your bills.
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td align="center">
+                                                    <table cellpadding="0" cellspacing="0" border="0">
+                                                        <tr>
+                                                            <td style="font-family: 'Arial', sans-serif; font-size: 14px; text-align: center; padding: 16px; border-radius: 6px; 
+                                                            background-color: #0396A6; color: #ffffff;">
+                                                                <span style="text-decoration: none; color: #ffffff;">
+                                                                    <a href="#" target="_blank" style="text-decoration: none; color: #ffffff;">
+                                                                        Learn More
+                                                                    </a>
+                                                                </span>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </th>
+                                    <!-- Column 03 : END -->
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <!-- 3 Column : END -->
                 </table>
             </td>
         </tr>
