--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
                     <!-- 3 Column : BEGIN -->
                     <tr>
-                        <td class="td" style="width: 600px; min-width: 600px; font-size: 0pt; line-height: 0pt; margin: 0; padding: 30px 15px 15px; Margin: 0">
+                        <td class="td" style="width: 600px; min-width: 600px; font-size: 0pt; line-height: 0pt; margin: 0; padding: 30px 15px 50px; Margin: 0">
                             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                 <tr>
                                     <!-- Column 01 : BEGIN -->
@@ -549,5 +549,110 @@
         </tr>
     </table>
 	<!-- Email Extra Cash : END -->
+
+    <!-- Footer : BEGIN -->
+	<table cellpadding="0" cellspacing="0" border="0" width="100%">
+        <tr>
+            <td align="center" valign="top">
+                <table cellpadding="0" cellspacing="0" border="0" width="600" class="mobile-shell" bgcolor="#0C4271">
+                    <tr>
+                        <td class="td" style="width: 600px; min-width: 600px; font-size: 0pt; line-height: 0pt; margin: 0; padding: 30px 15px 15px; Margin: 0">
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                <tr>
+                                    <!-- Left Column : BEGIN -->
+                                    <th class="column" width="300" style="font-size: 0pt; font-weight: normal; line-height: 0pt; margin: 0; padding: 0;">
+                                        <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                            <tr>    
+                                                <td align="center">
+                                                    <table cellpadding="0" cellspacing="0" border="0">
+                                                        <tr>
+                                                            <td class="nop" align="center" style="padding: 0 40px 0;">
+                                                                <table cellpadding="0" cellspacing="0" border="0">
+                                                                    <tr>
+                                                                        <td width="42" style="font-size: 0pt; line-height: 0pt; text-align: center;">
+                                                                            <img src="https://github.com/LucasPerrotaRoriz/Money-Transactional-Email-01/blob/main/images/facebook.png?raw=true"
+                                                                            width="32" height="32" border="0" alt="">
+                                                                        </td>
+                                                                        <td width="42" style="font-size: 0pt; line-height: 0pt; text-align: center;">
+                                                                            <img src="https://github.com/LucasPerrotaRoriz/Money-Transactional-Email-01/blob/main/images/twitter.png?raw=true"
+                                                                            width="32" height="32" border="0" alt="">
+                                                                        </td>
+                                                                        <td width="42" style="font-size: 0pt; line-height: 0pt; text-align: center;">
+                                                                            <img src="https://github.com/LucasPerrotaRoriz/Money-Transactional-Email-01/blob/main/images/linkedin.png?raw=true"
+                                                                            width="32" height="32" border="0" alt="">
+                                                                        </td>
+                                                                        <td width="42" style="font-size: 0pt; line-height: 0pt; text-align: center;">
+                                                                            <img src="https://github.com/LucasPerrotaRoriz/Money-Transactional-Email-01/blob/main/images/instagram.png?raw=true"
+                                                                            width="32" height="32" border="0" alt="">
+                                                                        </td>
+                                                                    </tr>
+                                                                </table>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="font-family: 'Arial', sans-serif; text-align: center; padding-top: 10px; color: #ffffff;">
+                                                    <p style="font-size: 14px; line-height: 22px;">
+                                                        +1 234 569875 <br />
+                                                        <span style="text-decoration: none; color: #ffffff;">
+                                                            <a href="#" target="_blank" style="text-decoration: none; color: #ffffff;">
+                                                                <span>
+                                                                    info@yourdomain.com
+                                                                </span>
+                                                            </a>
+                                                        </span>
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </th>
+                                    <!-- Left Column : END -->
+
+                                    <th class="column-empty2" width="1" style="font-size: 0pt; font-weight: normal; line-height: 0pt; margin: 0; padding: 0;"></th>
+
+                                    <!-- Right Column : BEGIN -->
+                                    <th class="column" width="300" style="font-size: 0pt; font-weight: normal; line-height: 0pt; margin: 0; padding: 0;">
+                                        <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                            <tr>
+                                                <td style="font-family: 'Arial', sans-serif; text-align: left; color: #ffffff;">
+                                                    <p style="font-size: 14px; line-height: 22px;">
+                                                        The Sunday Collective started as a love letter to the children of our founders. As a couple they wanted to create 
+                                                        something of their own, something that they could grow and unearth the wonders of our world.
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </th>
+                                    <!-- Right Column : END -->
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="font-family: 'Arial', sans-serif; text-align: center; padding-bottom: 10px; color: #ffffff;">
+                            <p style="font-size: 14px; line-height: 22px;">
+                                &copy; 20XX Unlayer - All rights reserved
+                            </p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td style="font-family: 'Arial', sans-serif; font-size: 14px; line-height: 22px; text-align: center; padding-bottom: 10px; color: #ffffff;">
+                            <span style="font-weight: bold; color: #ffffff;">
+                                <a href="#" target="_blank" style="font-weight: bold; color: #ffffff;">
+                                    <span>
+                                        Update | Unsubscribe
+                                    </span>
+                                </a>
+                            </span>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+	<!-- Footer : END -->
 </body>
 </html>
